--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pdr_zbarazh_react",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://A1eeex.github.io/PDR_Zbarazh_React",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
@@ -10,12 +10,12 @@
     "bootstrap": "^4.6.0",
     "emailjs-com": "^3.0.2",
     "google-map-react": "^2.2.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.2"
