--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pdr_zbarazh_react",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "homepage": "https://A1eeex.github.io/PDR_Zbarazh_React",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
