--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pdr_zbarazh_react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://A1eeex.github.io/PDR_Zbarazh_React",
+  "homepage": "https://A1eeex.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
@@ -45,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
+
